// =====================================================================
//  NGHIEP VU B - TAI SAN, KHO VA TON KHO
//  So do da rut gon, chi giu cac bang nghiep vu quan trong.
//  Cac bang duoc giu van dung field/khoa theo docs/database.dbml.
// =====================================================================

Table users {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  fullname varchar(255) [not null]
  phone_number varchar(255)
  avatar_url varchar(255)
  address varchar(255)
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  failed_login_attempts int [not null, default: 0]
  last_failed_login_at datetime
  is_active boolean [default: 1]
  role_id int
  class_id int
  major_id int
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table categories {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [not null, unique]
  description varchar(255)
  color varchar(255) [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table assets {
  id int [pk, increment]
  name varchar(255) [not null]
  code varchar(255) [unique]
  description varchar(255)
  image_url varchar(255)
  category_id int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table address {
  id bigint [pk, increment]
  address_detail varchar(255) [not null]
  latitude decimal(10,7)
  longitude decimal(10,7)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table warehouses {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [unique]
  address_id bigint
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table warehouse_user {
  user_id int [not null]
  warehouse_id int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime

  indexes {
    (user_id, warehouse_id) [pk]
  }
}

Table warehouse_asset {
  id int [pk, increment]
  asset_id int [not null]
  warehouse_id int [not null]
  quantity int [default: 0]
  maintenance_due datetime [default: `now()`]
  status int [default: 1]
  batch_code varchar(255) [not null, unique]
  expiration_date datetime [default: `now()`]
  manufacture_date datetime [default: `now()`]
  cost int [default: 0]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

// Relationships shown in this diagram.
Ref: users.created_by_user_id > users.id [delete: set null]
Ref: users.modified_by_user_id > users.id [delete: set null]
Ref: users.deleted_by_user_id > users.id [delete: set null]
Ref: categories.created_by_user_id > users.id [delete: set null]
Ref: categories.modified_by_user_id > users.id [delete: set null]
Ref: categories.deleted_by_user_id > users.id [delete: set null]
Ref: assets.category_id > categories.id [delete: restrict]
Ref: assets.created_by_user_id > users.id [delete: set null]
Ref: assets.modified_by_user_id > users.id [delete: set null]
Ref: assets.deleted_by_user_id > users.id [delete: set null]
Ref: address.created_by_user_id > users.id [delete: set null]
Ref: address.modified_by_user_id > users.id [delete: set null]
Ref: address.deleted_by_user_id > users.id [delete: set null]
Ref: warehouses.address_id > address.id [delete: set null]
Ref: warehouses.created_by_user_id > users.id [delete: set null]
Ref: warehouses.modified_by_user_id > users.id [delete: set null]
Ref: warehouses.deleted_by_user_id > users.id [delete: set null]
Ref: warehouse_user.user_id > users.id [delete: cascade]
Ref: warehouse_user.warehouse_id > warehouses.id [delete: cascade]
Ref: warehouse_user.created_by_user_id > users.id [delete: set null]
Ref: warehouse_user.modified_by_user_id > users.id [delete: set null]
Ref: warehouse_user.deleted_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.asset_id > assets.id [delete: cascade]
Ref: warehouse_asset.warehouse_id > warehouses.id [delete: cascade]
Ref: warehouse_asset.created_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.modified_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.deleted_by_user_id > users.id [delete: set null]

// Da luoc bo administrative_units, provinces, wards vi address hien khong co FK toi cac bang nay.
// users duoc giu lai de the hien warehouse_user va cac FK audit.
// users.role_id, users.class_id, users.major_id van la field that trong DB; cac bang roles/classes/majors khong ve o so do B de giu gon.

